2012-03-23  Ryosuke Niwa  <rniwa@webkit.org>

        cssText should use shorthand notations
        https://bugs.webkit.org/show_bug.cgi?id=81737

        Reviewed by Enrica Casucci.

        * wtf/BitVector.h:
        (BitVector):
        (WTF::BitVector::ensureSizeAndSet): Added.

2012-03-26  Carlos Garcia Campos  <cgarcia@igalia.com>

        Unreviewed. Fix make distcheck.

        * GNUmakefile.list.am: Add config.h to the source file list.

2012-03-25  Kevin Ollivier  <kevino@theolliviers.com>

        [wx] Unreviewed build fix. Move WTF to its own static lib build.

        * wscript: Added.

2012-03-23  Tony Chang  <tony@chromium.org>

        [chromium] Unreviewed, move a comment closer to where it matters and
        make it more specific.

        * WTF.gyp/WTF.gyp:

2012-03-23  Steve Falkenburg  <sfalken@apple.com>

        Update Apple Windows build files for WTF move
        https://bugs.webkit.org/show_bug.cgi?id=82069

        Reviewed by Jessie Berlin.

        * WTF.vcproj/WTF.make: Added.
        * WTF.vcproj/WTF.sln: Added.

2012-03-23  Dean Jackson  <dino@apple.com>

        Disable CSS_SHADERS in Apple builds
        https://bugs.webkit.org/show_bug.cgi?id=81996

        Reviewed by Simon Fraser.

        Put ENABLE_CSS_SHADERS into Platform.h, but disable for
        Apple builds.

        * wtf/Platform.h:

2012-03-23  Tony Chang  <tony@chromium.org>

        [chromium] rename newwtf target back to wtf
        https://bugs.webkit.org/show_bug.cgi?id=82064

        Reviewed by Adam Barth.

        * WTF.gyp/WTF.gyp:

2012-03-22  Jessie Berlin  <jberlin@apple.com>

        Windows build fix after r111778.

        * WTF.vcproj/WTF.vcproj:
        DateMath.h and DateMath.cpp should be built by WTF, since they are part of WTF.

2012-03-22  Raphael Kubo da Costa  <rakuco@FreeBSD.org>

        [CMake] Unreviewed build fix after r111778.

        * CMakeLists.txt: Added.
        * wtf/CMakeLists.txt: Add ${CMAKE_BINARY_DIR} to the include paths